cmake_minimum_required(VERSION 3.22)
project(BOJ)

set(CMAKE_CXX_STANDARD 14)

add_executable(BOJ
        c++/Bronze/10870.cc
        c++/Bronze/1100.cc
        c++/Bronze/1159.cc
        c++/Bronze/1193.cc
        c++/Bronze/1225.cc
        c++/Bronze/1236.cc
        c++/Bronze/1296.cc
        c++/Bronze/1453.cc
        c++/Bronze/14935.cc
        c++/Bronze/1547.cc
        c++/Bronze/15726.cc
        c++/Bronze/1977.cc
        c++/Bronze/23738.cc
        c++/Contest/GoodByeBoj2021/A.cc
        c++/Contest/GoodByeBoj2021/B.cc
        c++/Contest/HelloBoj2022/A.cc
        c++/Contest/Shake2021/A.cc
        c++/Gold/1011.cc
        c++/Gold/1013.cc
        c++/Gold/1038.cc
        c++/Gold/1339.cc
        c++/Gold/16678.cc
        c++/Gold/1747.cc
        c++/Gold/1990.cc
        c++/Gold/2023.cc
        c++/Gold/2045.cc
        c++/Gold/2075.cc
        c++/Gold/2437.cc
        c++/Gold/2866.cc
        c++/Gold/5014.cc
        c++/Gold/7983.cc
        c++/Silver/1021.cc
        c++/Silver/1026.cc
        c++/Silver/1049.cc
        c++/Silver/1052.cc
        c++/Silver/1059.cc
        c++/Silver/11653.cc
        c++/Silver/1174.cc
        c++/Silver/1246.cc
        c++/Silver/1268.cc
        c++/Silver/1269.cc
        c++/Silver/1291.cc
        c++/Silver/1316.cc
        c++/Silver/14241.cc
        c++/Silver/1590.cc
        c++/Silver/1822.cc
        c++/Silver/18870.cc
        c++/Silver/2057.cc
        c++/Silver/23028.cc
        c++/Silver/2607.cc
        c++/Silver/2852.cc
        c++/Silver/3186.cc
        c++/Silver/3944.cc
        c++/Silver/4159.cc)
