cmake_minimum_required(VERSION 3.22)
project(BOJ)

set(CMAKE_CXX_STANDARD 14)

add_executable(1100 c++/Bronze/1100.cc)
add_executable(1159 c++/Bronze/1159.cc)
add_executable(1193 c++/Bronze/1193.cc)
add_executable(1225 c++/Bronze/1225.cc)
add_executable(1236 c++/Bronze/1236.cc)
add_executable(1296 c++/Bronze/1296.cc)
add_executable(1453 c++/Bronze/1453.cc)
add_executable(1547 c++/Bronze/1547.cc)
add_executable(1977 c++/Bronze/1977.cc)
add_executable(10870 c++/Bronze/10870.cc)
add_executable(14935 c++/Bronze/14935.cc)
add_executable(15726 c++/Bronze/15726.cc)
add_executable(23738 c++/Bronze/23738.cc)
add_executable(1011 c++/Gold/1011.cc)
add_executable(1013 c++/Gold/1013.cc)
add_executable(1038 c++/Gold/1038.cc)
add_executable(1339 c++/Gold/1339.cc)
add_executable(1747 c++/Gold/1747.cc)
add_executable(1990 c++/Gold/1990.cc)
add_executable(2023 c++/Gold/2023.cc)
add_executable(2045 c++/Gold/2045.cc)
add_executable(2075 c++/Gold/2075.cc)
add_executable(2437 c++/Gold/2437.cc)
add_executable(2866 c++/Gold/2866.cc)
add_executable(5014 c++/Gold/5014.cc)
add_executable(7983 c++/Gold/7983.cc)
add_executable(16678 c++/Gold/16678.cc)
add_executable(G1918 c++/Gold/G1918.cc)
add_executable(G7576 c++/Gold/G7576.cc)
add_executable(G17129 c++/Gold/G17129.cc)
add_executable(G2206 c++/Gold/G2206.cc)
add_executable(G1753 c++/Gold/G1753.cc)
add_executable(G1083 c++/Gold/G1083.cc)
add_executable(G1916 c++/Gold/G1916.cc)
add_executable(G11054 c++/Gold/G11054.cc)
add_executable(G11779 c++/Gold/G11779.cc)
add_executable(G12851 c++/Gold/G12851.cc)
add_executable(G2042 c++/Gold/G2042.cc)
add_executable(GoodByeBoj2021_A c++/Contest/GoodByeBoj2021/A.cc)
add_executable(GoodByeBoj2021_B c++/Contest/GoodByeBoj2021/B.cc)
add_executable(HelloBoj2021_B c++/Contest/HelloBoj2022/A.cc)
add_executable(Shake2021_A c++/Contest/Shake2021/A.cc)
add_executable(1021 c++/Silver/1021.cc)
add_executable(1026 c++/Silver/1026.cc)
add_executable(1049 c++/Silver/1049.cc)
add_executable(1052 c++/Silver/1052.cc)
add_executable(1059 c++/Silver/1059.cc)
add_executable(1174 c++/Silver/1174.cc)
add_executable(1246 c++/Silver/1246.cc)
add_executable(1268 c++/Silver/1268.cc)
add_executable(1269 c++/Silver/1269.cc)
add_executable(1291 c++/Silver/1291.cc)
add_executable(1316 c++/Silver/1316.cc)
add_executable(1590 c++/Silver/1590.cc)
add_executable(1822 c++/Silver/1822.cc)
add_executable(2057 c++/Silver/2057.cc)
add_executable(2607 c++/Silver/2607.cc)
add_executable(2852 c++/Silver/2852.cc)
add_executable(3186 c++/Silver/3186.cc)
add_executable(3944 c++/Silver/3944.cc)
add_executable(4159 c++/Silver/4159.cc)
add_executable(11653 c++/Silver/11653.cc)
add_executable(14241 c++/Silver/14241.cc)
add_executable(18870 c++/Silver/18870.cc)
add_executable(23028 c++/Silver/23028.cc)
add_executable(S1260 c++/Silver/S1260.cc)
add_executable(S11047 c++/Silver/S11047.cc)
add_executable(S1012 c++/Silver/S1012.cc)
add_executable(S1991 c++/Silver/S1991.cc)
add_executable(S11053 c++/Silver/S11053.cc)
add_executable(S11660 c++/Silver/S11660.cc)
add_executable(S11725 c++/Silver/S11725.cc)
add_executable(S1149 c++/Silver/S1149.cc)