cmake_minimum_required(VERSION 3.22)
project(BOJ)

set(CMAKE_CXX_STANDARD 20)

add_executable(1100 c++/Bronze/1100.cc)
add_executable(1159 c++/Bronze/1159.cc)
add_executable(1193 c++/Bronze/1193.cc)
add_executable(1225 c++/Bronze/1225.cc)
add_executable(1236 c++/Bronze/1236.cc)
add_executable(1296 c++/Bronze/1296.cc)
add_executable(1453 c++/Bronze/1453.cc)
add_executable(1547 c++/Bronze/1547.cc)
add_executable(1977 c++/Bronze/1977.cc)
add_executable(10870 c++/Bronze/10870.cc)
add_executable(14935 c++/Bronze/14935.cc)
add_executable(15726 c++/Bronze/15726.cc)
add_executable(23738 c++/Bronze/23738.cc)
add_executable(1011 c++/Gold/1011.cc)
add_executable(1013 c++/Gold/1013.cc)
add_executable(1038 c++/Gold/1038.cc)
add_executable(1339 c++/Gold/1339.cc)
add_executable(1747 c++/Gold/1747.cc)
add_executable(1990 c++/Gold/1990.cc)
add_executable(2023 c++/Gold/2023.cc)
add_executable(2045 c++/Gold/2045.cc)
add_executable(2075 c++/Gold/2075.cc)
add_executable(2437 c++/Gold/2437.cc)
add_executable(2866 c++/Gold/2866.cc)
add_executable(5014 c++/Gold/5014.cc)
add_executable(7983 c++/Gold/7983.cc)
add_executable(16678 c++/Gold/16678.cc)
add_executable(G1918 c++/Gold/G1918.cc)
add_executable(G7576 c++/Gold/G7576.cc)
add_executable(G17129 c++/Gold/G17129.cc)
add_executable(G2206 c++/Gold/G2206.cc)
add_executable(G1753 c++/Gold/G1753.cc)
add_executable(G1083 c++/Gold/G1083.cc)
add_executable(G1916 c++/Gold/G1916.cc)
add_executable(G11054 c++/Gold/G11054.cc)
add_executable(G11779 c++/Gold/G11779.cc)
add_executable(G12851 c++/Gold/G12851.cc)
add_executable(G2042 c++/Gold/G2042.cc)
add_executable(GoodByeBoj2021_A c++/Contest/GoodByeBoj2021/A.cc)
add_executable(GoodByeBoj2021_B c++/Contest/GoodByeBoj2021/B.cc)
add_executable(HelloBoj2021_B c++/Contest/HelloBoj2022/A.cc)
add_executable(Shake2021_A c++/Contest/Shake2021/A.cc)
add_executable(1021 c++/Silver/1021.cc)
add_executable(1026 c++/Silver/1026.cc)
add_executable(1049 c++/Silver/1049.cc)
add_executable(1052 c++/Silver/1052.cc)
add_executable(1059 c++/Silver/1059.cc)
add_executable(1174 c++/Silver/1174.cc)
add_executable(1246 c++/Silver/1246.cc)
add_executable(1268 c++/Silver/1268.cc)
add_executable(1269 c++/Silver/1269.cc)
add_executable(1291 c++/Silver/1291.cc)
add_executable(1316 c++/Silver/1316.cc)
add_executable(1590 c++/Silver/1590.cc)
add_executable(1822 c++/Silver/1822.cc)
add_executable(2057 c++/Silver/2057.cc)
add_executable(2607 c++/Silver/2607.cc)
add_executable(2852 c++/Silver/2852.cc)
add_executable(3186 c++/Silver/3186.cc)
add_executable(3944 c++/Silver/3944.cc)
add_executable(4159 c++/Silver/4159.cc)
add_executable(11653 c++/Silver/11653.cc)
add_executable(14241 c++/Silver/14241.cc)
add_executable(18870 c++/Silver/18870.cc)
add_executable(23028 c++/Silver/23028.cc)
add_executable(S1260 c++/Silver/S1260.cc)
add_executable(S11047 c++/Silver/S11047.cc)
add_executable(S1012 c++/Silver/S1012.cc)
add_executable(S1991 c++/Silver/S1991.cc)
add_executable(S11053 c++/Silver/S11053.cc)
add_executable(S11660 c++/Silver/S11660.cc)
add_executable(S11725 c++/Silver/S11725.cc)
add_executable(S1149 c++/Silver/S1149.cc)
add_executable(18258 c++/Silver/18258.cc)
add_executable(11726 c++/Silver/11726.cc)
add_executable(1912 c++/Silver/1912.cc)
add_executable(11058 c++/Gold/11058.cc)
add_executable(2178 c++/Silver/2178.cc)
add_executable(12865 c++/Gold/12865.cc)
add_executable(1427 c++/Silver/1427.cc)
add_executable(2217 c++/Silver/2217.cc)
add_executable(2579 c++/Silver/2579.cc)
add_executable(11724 c++/Silver/11724.cc)
add_executable(2667 c++/Silver/2667.cc)
add_executable(11729 c++/Gold/11729.cc)
add_executable(2447 c++/Gold/2447.cc)
add_executable(9663 c++/Gold/9663.cc)
add_executable(1932 c++/Silver/1932.cc)
add_executable(6549 c++/Platinum/6549.cc)
add_executable(14003 c++/Platinum/14003.cc)
add_executable(2166 c++/Gold/2166.cc)
add_executable(11003 c++/Platinum/11003.cc)
add_executable(2467 c++/Gold/2467.cc)
add_executable(15681 c++/Gold/15681.cc)
add_executable(1197 c++/Gold/1197.cc)
add_executable(1395 c++/Platinum/1395.cc)
add_executable(1647 c++/Gold/1647.cc)
add_executable(1806 c++/Gold/1806.cc)
add_executable(9252 c++/Gold/9252.cc)
add_executable(20040 c++/Gold/20040.cc)
add_executable(1644 c++/Gold/1644.cc)
add_executable(1074 c++/Gold/1074.cc)
add_executable(2623 c++/Gold/2623.cc)
add_executable(1005 c++/Gold/1005.cc)
add_executable(2252 c++/Gold/2252.cc)
add_executable(9466 c++/Gold/9466.cc)
add_executable(1992 c++/Silver/1992.cc)
add_executable(2239 c++/Gold/2239.cc)
add_executable(17404 c++/Gold/17404.cc)
add_executable(11049 c++/Gold/11049.cc)
add_executable(10775 c++/Gold/10775.cc)
add_executable(9527 c++/Gold/9527.cc)
add_executable(5430 c++/Gold/5430.cc)
add_executable(9521 c++/Gold/9521.cc)
add_executable(13549 c++/Gold/13549.cc)
add_executable(29704 c++/Gold/29704.cc)
add_executable(28139 c++/Gold/28139.cc)
add_executable(1034 c++/Gold/1034.cc)
add_executable(2651 c++/Gold/2651.cc)
add_executable(19240 c++/Gold/19240.cc)
add_executable(16964 c++/Gold/16964.cc)
add_executable(3013 c++/Gold/3013.cc)
add_executable(4386 c++/Gold/4386.cc)
add_executable(1238 c++/Gold/1238.cc)
add_executable(10711 c++/Gold/10711.cc)
add_executable(1167 c++/Gold/1167.cc)
add_executable(1655 c++/Gold/1655.cc)
add_executable(1377 c++/Gold/1377.cc)
add_executable(1781 c++/Gold/1781.cc)
add_executable(1517 c++/Platinum/1517.cc)
add_executable(1572 c++/Platinum/1572.cc)
add_executable(2357 c++/Gold/2357.cc)
add_executable(11505 c++/Gold/11505.cc)
add_executable(10868 c++/Gold/10868.cc)
add_executable(2268 c++/Gold/2268.cc)
add_executable(16975 c++/Platinum/16975.cc)
add_executable(10999 c++/Platinum/10999.cc)
add_executable(16496 c++/Platinum/16496.cc)
add_executable(13977 c++/Platinum/13977.cc)
add_executable(1082 c++/Gold/1082.cc)
add_executable(27925 c++/Gold/27925.cc)
add_executable(1036 c++/Gold/1036.cc)
add_executable(22866 c++/Gold/22866.cc)
add_executable(16435 c++/Silver/16435.cc)
add_executable(6591 c++/Silver/6591.cc)
add_executable(1068 c++/Gold/1068.cc)
add_executable(13247 c++/Gold/13247.cc)
add_executable(14906 c++/Gold/14906.cc)
add_executable(26651 c++/Gold/26651.cc)
add_executable(2630 c++/Silver/2630.cc)